parser.output
Terminals unused in grammar

   "end of line"
   "double"
   "string"


Grammar

    0 $accept: program "end of file"

    1 program: blocks

    2 blocks: blocks blok
    3       | /* empty */

    4 blok: functiondef stmtblock

    5 functiondef: DEF "identifier"

    6 statements: statements statement
    7           | /* empty */

    8 stmtblock: T_BEGIN statements T_END

    9 statement: stmtblock
   10          | assignment
   11          | iteration
   12          | READ "identifier" SEMICOLON
   13          | WRITE "identifier" SEMICOLON
   14          | ifstatement
   15          | CALL "identifier" SEMICOLON
   16          | DEF "identifier" SEMICOLON

   17 ifstatement: IF expression THEN statement
   18            | IF expression THEN statement ELSE statement

   19 iteration: WHILE expression statement
   20          | DO statement WHILE expression SEMICOLON

   21 assignment: "identifier" ASSIGNOP expression SEMICOLON

   22 expression: "identifier"
   23           | "integer"
   24           | expression '+' expression
   25           | expression '-' expression
   26           | expression '*' expression
   27           | expression '/' expression
   28           | LPAREN expression RPAREN


Terminals, with rules where they appear

"end of file" (0) 0
'*' (42) 26
'+' (43) 24
'-' (45) 25
'/' (47) 27
error (256)
"end of line" (258)
"integer" (259) 23
"double" (260)
"string" (261)
"identifier" (262) 5 12 13 15 16 21 22
T_BEGIN (263) 8
T_END (264) 8
SEMICOLON (265) 12 13 15 16 20 21
ASSIGNOP (266) 21
IF (267) 17 18
THEN (268) 17 18
ELSE (269) 18
WHILE (270) 19 20
DO (271) 20
READ (272) 12
WRITE (273) 13
DEF (274) 5 16
CALL (275) 15
LPAREN (276) 28
RPAREN (277) 28
REDUCE (278)


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1, on right: 0
blocks (30)
    on left: 2 3, on right: 1 2
blok (31)
    on left: 4, on right: 2
functiondef (32)
    on left: 5, on right: 4
statements (33)
    on left: 6 7, on right: 6 8
stmtblock (34)
    on left: 8, on right: 4 9
statement (35)
    on left: 9 10 11 12 13 14 15 16, on right: 6 17 18 19 20
ifstatement (36)
    on left: 17 18, on right: 14
iteration (37)
    on left: 19 20, on right: 11
assignment (38)
    on left: 21, on right: 10
expression (39)
    on left: 22 23 24 25 26 27 28, on right: 17 18 19 20 21 24 25 26
    27 28


state 0

    0 $accept: . program "end of file"

    $default  reduce using rule 3 (blocks)

    program  go to state 1
    blocks   go to state 2


state 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


state 2

    1 program: blocks .
    2 blocks: blocks . blok

    DEF  shift, and go to state 4

    $default  reduce using rule 1 (program)

    blok         go to state 5
    functiondef  go to state 6


state 3

    0 $accept: program "end of file" .

    $default  accept


state 4

    5 functiondef: DEF . "identifier"

    "identifier"  shift, and go to state 7


state 5

    2 blocks: blocks blok .

    $default  reduce using rule 2 (blocks)


state 6

    4 blok: functiondef . stmtblock

    T_BEGIN  shift, and go to state 8

    stmtblock  go to state 9


state 7

    5 functiondef: DEF "identifier" .

    $default  reduce using rule 5 (functiondef)


state 8

    8 stmtblock: T_BEGIN . statements T_END

    $default  reduce using rule 7 (statements)

    statements  go to state 10


state 9

    4 blok: functiondef stmtblock .

    $default  reduce using rule 4 (blok)


state 10

    6 statements: statements . statement
    8 stmtblock: T_BEGIN statements . T_END

    "identifier"  shift, and go to state 11
    T_BEGIN       shift, and go to state 8
    T_END         shift, and go to state 12
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    DO            shift, and go to state 15
    READ          shift, and go to state 16
    WRITE         shift, and go to state 17
    DEF           shift, and go to state 18
    CALL          shift, and go to state 19

    stmtblock    go to state 20
    statement    go to state 21
    ifstatement  go to state 22
    iteration    go to state 23
    assignment   go to state 24


state 11

   21 assignment: "identifier" . ASSIGNOP expression SEMICOLON

    ASSIGNOP  shift, and go to state 25


state 12

    8 stmtblock: T_BEGIN statements T_END .

    $default  reduce using rule 8 (stmtblock)


state 13

   17 ifstatement: IF . expression THEN statement
   18            | IF . expression THEN statement ELSE statement

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 29


state 14

   19 iteration: WHILE . expression statement

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 30


state 15

   20 iteration: DO . statement WHILE expression SEMICOLON

    "identifier"  shift, and go to state 11
    T_BEGIN       shift, and go to state 8
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    DO            shift, and go to state 15
    READ          shift, and go to state 16
    WRITE         shift, and go to state 17
    DEF           shift, and go to state 18
    CALL          shift, and go to state 19

    stmtblock    go to state 20
    statement    go to state 31
    ifstatement  go to state 22
    iteration    go to state 23
    assignment   go to state 24


state 16

   12 statement: READ . "identifier" SEMICOLON

    "identifier"  shift, and go to state 32


state 17

   13 statement: WRITE . "identifier" SEMICOLON

    "identifier"  shift, and go to state 33


state 18

   16 statement: DEF . "identifier" SEMICOLON

    "identifier"  shift, and go to state 34


state 19

   15 statement: CALL . "identifier" SEMICOLON

    "identifier"  shift, and go to state 35


state 20

    9 statement: stmtblock .

    $default  reduce using rule 9 (statement)


state 21

    6 statements: statements statement .

    $default  reduce using rule 6 (statements)


state 22

   14 statement: ifstatement .

    $default  reduce using rule 14 (statement)


state 23

   11 statement: iteration .

    $default  reduce using rule 11 (statement)


state 24

   10 statement: assignment .

    $default  reduce using rule 10 (statement)


state 25

   21 assignment: "identifier" ASSIGNOP . expression SEMICOLON

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 36


state 26

   23 expression: "integer" .

    $default  reduce using rule 23 (expression)


state 27

   22 expression: "identifier" .

    $default  reduce using rule 22 (expression)


state 28

   28 expression: LPAREN . expression RPAREN

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 37


state 29

   17 ifstatement: IF expression . THEN statement
   18            | IF expression . THEN statement ELSE statement
   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression

    THEN  shift, and go to state 38
    '-'   shift, and go to state 39
    '+'   shift, and go to state 40
    '*'   shift, and go to state 41
    '/'   shift, and go to state 42


state 30

   19 iteration: WHILE expression . statement
   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression

    "identifier"  shift, and go to state 11
    T_BEGIN       shift, and go to state 8
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    DO            shift, and go to state 15
    READ          shift, and go to state 16
    WRITE         shift, and go to state 17
    DEF           shift, and go to state 18
    CALL          shift, and go to state 19
    '-'           shift, and go to state 39
    '+'           shift, and go to state 40
    '*'           shift, and go to state 41
    '/'           shift, and go to state 42

    stmtblock    go to state 20
    statement    go to state 43
    ifstatement  go to state 22
    iteration    go to state 23
    assignment   go to state 24


state 31

   20 iteration: DO statement . WHILE expression SEMICOLON

    WHILE  shift, and go to state 44


state 32

   12 statement: READ "identifier" . SEMICOLON

    SEMICOLON  shift, and go to state 45


state 33

   13 statement: WRITE "identifier" . SEMICOLON

    SEMICOLON  shift, and go to state 46


state 34

   16 statement: DEF "identifier" . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 35

   15 statement: CALL "identifier" . SEMICOLON

    SEMICOLON  shift, and go to state 48


state 36

   21 assignment: "identifier" ASSIGNOP expression . SEMICOLON
   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression

    SEMICOLON  shift, and go to state 49
    '-'        shift, and go to state 39
    '+'        shift, and go to state 40
    '*'        shift, and go to state 41
    '/'        shift, and go to state 42


state 37

   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression
   28           | LPAREN expression . RPAREN

    RPAREN  shift, and go to state 50
    '-'     shift, and go to state 39
    '+'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42


state 38

   17 ifstatement: IF expression THEN . statement
   18            | IF expression THEN . statement ELSE statement

    "identifier"  shift, and go to state 11
    T_BEGIN       shift, and go to state 8
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    DO            shift, and go to state 15
    READ          shift, and go to state 16
    WRITE         shift, and go to state 17
    DEF           shift, and go to state 18
    CALL          shift, and go to state 19

    stmtblock    go to state 20
    statement    go to state 51
    ifstatement  go to state 22
    iteration    go to state 23
    assignment   go to state 24


state 39

   25 expression: expression '-' . expression

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 52


state 40

   24 expression: expression '+' . expression

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 53


state 41

   26 expression: expression '*' . expression

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 54


state 42

   27 expression: expression '/' . expression

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 55


state 43

   19 iteration: WHILE expression statement .

    $default  reduce using rule 19 (iteration)


state 44

   20 iteration: DO statement WHILE . expression SEMICOLON

    "integer"     shift, and go to state 26
    "identifier"  shift, and go to state 27
    LPAREN        shift, and go to state 28

    expression  go to state 56


state 45

   12 statement: READ "identifier" SEMICOLON .

    $default  reduce using rule 12 (statement)


state 46

   13 statement: WRITE "identifier" SEMICOLON .

    $default  reduce using rule 13 (statement)


state 47

   16 statement: DEF "identifier" SEMICOLON .

    $default  reduce using rule 16 (statement)


state 48

   15 statement: CALL "identifier" SEMICOLON .

    $default  reduce using rule 15 (statement)


state 49

   21 assignment: "identifier" ASSIGNOP expression SEMICOLON .

    $default  reduce using rule 21 (assignment)


state 50

   28 expression: LPAREN expression RPAREN .

    $default  reduce using rule 28 (expression)


state 51

   17 ifstatement: IF expression THEN statement .
   18            | IF expression THEN statement . ELSE statement

    ELSE  shift, and go to state 57

    $default  reduce using rule 17 (ifstatement)


state 52

   24 expression: expression . '+' expression
   25           | expression . '-' expression
   25           | expression '-' expression .
   26           | expression . '*' expression
   27           | expression . '/' expression

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 25 (expression)


state 53

   24 expression: expression . '+' expression
   24           | expression '+' expression .
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 24 (expression)


state 54

   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   26           | expression '*' expression .
   27           | expression . '/' expression

    $default  reduce using rule 26 (expression)


state 55

   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression
   27           | expression '/' expression .

    $default  reduce using rule 27 (expression)


state 56

   20 iteration: DO statement WHILE expression . SEMICOLON
   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression

    SEMICOLON  shift, and go to state 58
    '-'        shift, and go to state 39
    '+'        shift, and go to state 40
    '*'        shift, and go to state 41
    '/'        shift, and go to state 42


state 57

   18 ifstatement: IF expression THEN statement ELSE . statement

    "identifier"  shift, and go to state 11
    T_BEGIN       shift, and go to state 8
    IF            shift, and go to state 13
    WHILE         shift, and go to state 14
    DO            shift, and go to state 15
    READ          shift, and go to state 16
    WRITE         shift, and go to state 17
    DEF           shift, and go to state 18
    CALL          shift, and go to state 19

    stmtblock    go to state 20
    statement    go to state 59
    ifstatement  go to state 22
    iteration    go to state 23
    assignment   go to state 24


state 58

   20 iteration: DO statement WHILE expression SEMICOLON .

    $default  reduce using rule 20 (iteration)


state 59

   18 ifstatement: IF expression THEN statement ELSE statement .

    $default  reduce using rule 18 (ifstatement)
